--- a/exercicios/modulo02/ex023/tabela001.html
+++ b/exercicios/modulo02/ex023/tabela001.html
@@ -10,11 +10,17 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         td {
             border: 1px solid black;
             padding: 5px;
+            text-align: center;
+            vertical-align: middle;
+        }
+        .numero {
+            text-align: right;
         }
     </style>
 </head>
@@ -29,22 +35,22 @@
             <tr>
                 <td>A1</td>
                 <td>B1</td>
-                <td>C1</td>
+                <td class="numero">C1</td>
             </tr>
             <tr>
                 <td>A2</td>
                 <td>B2</td>
-                <td>C2</td>
+                <td class="numero">C2</td>
             </tr>
             <tr>
                 <td>A3</td>
                 <td>B3</td>
-                <td>C3</td>
+                <td class="numero">C3</td>
             </tr>
             <tr>
                 <td>A4</td>
                 <td>B4</td>
-                <td>C4</td>
+                <td class="numero">C4</td>
             </tr>
         </table>
 </body>
