--- a/exercicios/modulo02/ex024/iframe003.html
+++ b/exercicios/modulo02/ex024/iframe003.html
@@ -25,7 +25,7 @@
     </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi numquam dicta quaerat. Deserunt, autem repellat quae iste, ullam architecto explicabo harum impedit fugit tempora, quidem assumenda est et modi recusandae? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores iste ullam minus quisquam libero voluptas, tempora assumenda aut ipsam consectetur, molestias, sit cupiditate optio deleniti magni. Sit error esse voluptate!</p>
 
-    <iframe name="frm" srcdoc="<h1>Escolha um das opções acima<p>Escolha algum dos links acima para mudar esse iframe" >Seu navegadro não suporta iframes</iframe>
+    <iframe name="frm" srcdoc="<h1>Escolha um das opções acima<p>Escolha algum dos links acima para mudar esse iframe" >Seu navegadoro não suporta iframes</iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facere autem sunt blanditiis ipsum esse, molestias, impedit architecto sequi asperiores, vel fugiat quaerat amet. Dolore assumenda laboriosam aliquid explicabo voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, recusandae repellendus est placeat omnis distinctio vitae. Repellat velit neque at odio dolore, iusto repellendus eius quas. Magni ea labore beatae!</p>
     
