--- a/exercicios/ex21/mq004/index.html
+++ b/exercicios/ex21/mq004/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phn" src="imgs/icon-phone.png" alt="Versão para telefone">
+        <img id="tblt" src="imgs/icon-tablet.png" alt="Versão para tablet">
+        <img id="imp" src="imgs/icon-print.png" alt="Versão para impressão">
+        <img id="pc" src="imgs/icon-pc.png" alt="Versão para PC">
+        <img id="tv" src="imgs/icon-tv.png" alt="Versão para TV">
+    </main>
     
 </body>
 </html>
